--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: IBM z/VM Security Guidance and How To's
 author: Brian Hugenbruch, CISSP
-description: [Brian Hugenbruch](https://bwhugen.github.io/about.md) is a Senior Software Engineer at IBM; he has spent 20+ years working in the field of z/VM security, cryptography, and cyber-resiliency. But he's also a word-nerd, so now he's building a blog. I'm so sorry.
+description: Brian Hugenbruch is a Senior Software Engineer at IBM; he has spent 20+ years working in the field of z/VM security, cryptography, and cyber-resiliency. But he's also a word-nerd, so now he's building a blog. I'm so sorry.
